--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,7 +19,7 @@ services:
 
   # Collector
   otel-collector:
-    image: otel/opentelemetry-collector
+    image: otel/opentelemetry-collector:0.67.0
     restart: always
     command: ["--config=/etc/otel-collector-config.yaml"]
     volumes:
