--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -2,6 +2,7 @@ receivers:
   otlp:
     protocols:
       grpc:
+      http:
 
 exporters:
   prometheus:
@@ -9,14 +10,14 @@ exporters:
     const_labels:
       label1: value1
 
-  debug:
+  logging:
 
   zipkin:
     endpoint: "http://zipkin-all-in-one:9411/api/v2/spans"
     format: proto
 
-  otlp:
-    endpoint: jaeger-all-in-one:4317
+  jaeger:
+    endpoint: jaeger-all-in-one:14250
     tls:
       insecure: true
 
@@ -36,8 +37,8 @@ service:
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: [debug, zipkin, otlp]
+      exporters: [logging, zipkin, jaeger]
     metrics:
       receivers: [otlp]
       processors: [batch]
-      exporters: [debug, prometheus]
+      exporters: [logging, prometheus]
