--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev:otel": "NEXT_OTEL_VERBOSE=1&next dev",
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
