--- a/package.json
+++ b/package.json
@@ -11,16 +11,24 @@
   },
   "dependencies": {
     "@vercel/otel": "^1.9.1",
+    "aws-amplify": "^6.4.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.0.4",
+    "@aws-amplify/backend-cli": "^1.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "aws-cdk": "^2.149.0",
+    "aws-cdk-lib": "^2.149.0",
+    "constructs": "^10.3.0",
+    "esbuild": "^0.23.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "typescript": "^5"
+    "tsx": "^4.16.2",
+    "typescript": "^5.5.3"
   }
 }
