--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.1.13",
     "@vercel/otel": "^1.9.1",
-    "aws-amplify": "^6.4.0",
+    "aws-amplify": "^6.4.2",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
