chore: debug env

--- a/.github/workflows/pr-development.yml
+++ b/.github/workflows/pr-development.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: pull-request
         run: |
+          echo $GITHUB_REF_NAME
           gh_pr_up() { gh pr create $* || gh pr edit $* }
           gh_pr_up --title "Merge feature/${GITHUB_REF_NAME} into dev" 
             --body "Automated PR from feature/${GITHUB_REF_NAME} to dev" 
