fix(workflow): change to gh

--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -12,9 +12,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Set up gh
+        uses: actions/setup-gh@v3
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Get current version
         run: |
-          VERSION=$(git describe --tags --abbrev=0)
+          VERSION=$(gh release view --json tagName --jq .tagName)
           echo "VERSION=$VERSION" >> $GITHUB_ENV
 
       - name: Create release branch
