--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -16,9 +16,13 @@ jobs:
         run: |
           VERSION=$(gh release view --json tagName --jq .tagName)
           echo "VERSION=$VERSION" >> $GITHUB_ENV
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create release branch
         run: |
           RELEASE_BRANCH="release/v${VERSION}"
           git checkout -b $RELEASE_BRANCH dev
           git push origin $RELEASE_BRANCH
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
