--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,9 +1,9 @@
 name: Create Release Branch
 
 on:
-  push:
-    branches:
-      - dev
+  workflow_run:
+    workflows: ["Create Tag"]
+    types: ["completed"]
 
 jobs:
   create-release-branch:
