fix(workflow): change on

--- a/.github/workflows/create-tag.yml
+++ b/.github/workflows/create-tag.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - dev
-  workflow_call:
+  workflow_dispatch:
     inputs:
       version:
         description: 'Semantic version (e.g. 1.0.0)'
