--- a/.github/workflows/create-tag.yml
+++ b/.github/workflows/create-tag.yml
@@ -1,7 +1,7 @@
 name: Create Tag
 
 on:
-  workflow_dispatch:
+  workflow_call:
     inputs:
       version:
         description: 'Semantic version (e.g. 1.0.0)'
