--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Create release branch
         run: |
           RELEASE_BRANCH="release/${VERSION}"
-          git checkout -b $RELEASE_BRANCH dev
+          git checkout -b $RELEASE_BRANCH
           git push origin $RELEASE_BRANCH
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
